--- a/students/organisation.html
+++ b/students/organisation.html
@@ -280,8 +280,8 @@
               <div class="inner">
                 <!-- START BREADCRUMB -->
                 <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                  <li class="breadcrumb-item active">Blank template</li>
+                  <li class="breadcrumb-item"><a href="#">Home</a></li>
+                  <li class="breadcrumb-item active">Organisations</li>
                 </ol>
                 <!-- END BREADCRUMB -->
               </div>
